[package]
name = "feedcruncher"
version = "0.1.0"
authors = ["Michael Schubert <schu@schu.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.0.0-beta.5", features = ["derive"]}
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "c2b4b62c332fbdf2d0a738632bdc65dbe7119740", features = ["sqlite", "r2d2"] }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", rev = "c2b4b62c332fbdf2d0a738632bdc65dbe7119740", features = ["sqlite"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
toml = "0.5"
