[package]
name = "feedcruncher"
version = "0.1.0"
authors = ["Michael Schubert <schu@schu.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2", features = ["derive"]}
diesel = { version = "2.0.0-rc.0", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.0.0-rc.0", features = ["sqlite"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["v4"] }
toml = "0.5"
