[package]
name = "feedcruncher"
version = "0.1.0"
authors = ["Michael Schubert <schu@schu.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
atom_syndication = "0.12"
tokio = { version = "1.39", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls", "chrono"] }
actix-web = "4.3"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"]}
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"]}
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
toml = "0.8"
